Changed redislabs.com to redis.com URLs

--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -12,7 +12,7 @@ Follow the below steps to setup Redis Enterprise Cloud hosted over AWS Cloud:
 
 ### Step 1. Create free cloud account
 
-Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 ![image](images/deployment.png)
 
