--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -48,7 +48,7 @@ Click Setup to start the node configuration steps.
 
 ### Step 2:  Enter your preferred FQDN 
 
-In the Node Configuration settings, enter a cluster FQDN such as demo.redislabs.com. Then click Next button.
+In the Node Configuration settings, enter a cluster FQDN such as demo.redis.com. Then click Next button.
 
 ![My Image](images/resoftware-2.png)
 
