--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -237,8 +237,8 @@ Check out a few of these apps below, or [click here to access the complete list]
 
 ### Technical Articles & Whitepapers
 
-**[Redis and Golang: Designed to Improve Performance](https://redislabs.com/blog/redis-go-designed-improve-performance/)**
+**[Redis and Golang: Designed to Improve Performance](https://redis.com/blog/redis-go-designed-improve-performance/)**
 
-**[A High Performance Recommendation Engine with Redis and Go](https://redislabs.com/docs/ultra-fast-recommendations-engine-using-redis-go/)**
+**[A High Performance Recommendation Engine with Redis and Go](https://redis.com/docs/ultra-fast-recommendations-engine-using-redis-go/)**
 
 
