--- a/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
@@ -298,6 +298,6 @@ This makes Redis an excellent choice for applications that require real time dat
 Here's some resources that we think will be useful to you as you discover Redis:
 
 * [redis.io](https://redis.io/) - the official website of open source Redis.
-* [Redis Enterprise Cloud](https://redislabs.com/redis-enterprise-cloud/overview/) - a fully managed cloud service from Redis Labs with a free plan for getting started.
+* [Redis Enterprise Cloud](https://redis.com/redis-enterprise-cloud/overview/) - a fully managed cloud service from Redis with a free plan for getting started.
 * The official [Redis Docker image](https://hub.docker.com/_/redis/).
-* For a comprehensive introduction to Redis, we recommend taking a look at the [RU101: Introduction to Redis Data Structures](https://university.redislabs.com/courses/ru101/) course at Redis University. In this free online course, you’ll learn about the data structures in Redis, and you’ll see how to practically apply them in the real world.
+* For a comprehensive introduction to Redis, we recommend taking a look at the [RU101: Introduction to Redis Data Structures](https://university.redis.com/courses/ru101/) course at Redis University. In this free online course, you’ll learn about the data structures in Redis, and you’ll see how to practically apply them in the real world.
