--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -79,7 +79,7 @@ Application that shows how to do rate limiting using various Redis datastructure
 
 #### Technical Articles & Videos
 
-**[Beyond the Cache with Python](https://redislabs.com/blog/beyond-the-cache-with-python/)**
+**[Beyond the Cache with Python](https://redis.com/blog/beyond-the-cache-with-python/)**
 
 
 </div>
@@ -120,7 +120,7 @@ Check out a few of these apps below, or [click here to access the complete list]
 
 ## Redis University
 
-### [Redis for Python Developers](https://university.redislabs.com/courses/ru102py/)
+### [Redis for Python Developers](https://university.redis.com/courses/ru102py/)
 
 A complete introduction to Redis for Python developers.
 
