--- a/docs/develop/rust/index-rust.mdx
+++ b/docs/develop/rust/index-rust.mdx
@@ -72,7 +72,7 @@ It exposes a general purpose interface to Redis and also provides specific helpe
 
 ### Further References
 
-- [Redis Enterprise and Rust](https://redislabs.com/lp/redis-enterprise-rust/)
+- [Redis Enterprise and Rust](https://redis.com/lp/redis-enterprise-rust/)
 - [Getting Started with Redis & Rust](https://github.com/redis-developer/redis-rust-getting-started)
 
 
