--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -31,7 +31,7 @@ Follow the below instructions to test drive RedisInsight profiler tool:
 
 ## Step 1.  Create Redis database with RedisTimeSeries module enabled
 
-Visit [https://developer.redislabs.com/create/rediscloud](https://developer.redislabs.com/create/rediscloud) and create a Redis database. [Follow these steps to enable RedisTimeSeries module ](https://developer.redislabs.com/howtos/redistimeseries)on Redis Enterprise Cloud
+Visit [https://developer.redis.com/create/rediscloud](https://developer.redis.com/create/rediscloud) and create a Redis database. [Follow these steps to enable RedisTimeSeries module ](https://developer.redis.com/howtos/redistimeseries)on Redis Enterprise Cloud
 
 
 
@@ -43,7 +43,7 @@ Visit [https://developer.redislabs.com/create/rediscloud](https://developer.redi
 
 To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
 
-[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+[Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](images/redisinsightinstall.png)
 
@@ -194,7 +194,7 @@ except KeyboardInterrupt:
 ```
 
 
-The complete walkthrough of this python script is explained [here](https://redislabs.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/).
+The complete walkthrough of this python script is explained [here](https://redis.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/).
 
 ## Step 4: Execute the sensor script
 
@@ -229,7 +229,7 @@ OK
 
 ## Step 5: Accessing the RedisTimeSeries Keys 
 
-[Follow these steps to connect to the database](https://developer.redislabs.com/explore/redisinsight/getting-started) using RedisInsight. Once you are connected to RedisInsight GUI, you can verify the 3 RedisTimeSeries keys:
+[Follow these steps to connect to the database](https://developer.redis.com/explore/redisinsight/getting-started) using RedisInsight. Once you are connected to RedisInsight GUI, you can verify the 3 RedisTimeSeries keys:
 
 
 
@@ -250,7 +250,7 @@ OK
 ![alt_text](images/image3.png "image_tooltip")
 
 
-Please note that In RedisTimeSeries, only [TS.RANGE ](https://oss.redislabs.com/redistimeseries/commands/#tsrangetsrevrange)and [TS.MRANGE](https://oss.redislabs.com/redistimeseries/commands/#tsmrangetsmrevrange) are supported as of the current release. In the next release, TS.REVRANGE and TS.MREVRANGE will be supported too.
+Please note that In RedisTimeSeries, only [TS.RANGE ](https://oss.redis.com/redistimeseries/commands/#tsrangetsrevrange)and [TS.MRANGE](https://oss.redis.com/redistimeseries/commands/#tsmrangetsmrevrange) are supported as of the current release. In the next release, TS.REVRANGE and TS.MREVRANGE will be supported too.
 
 
 
