--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -15,7 +15,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 If you want to add a time series data structure to your Redis database, check out RedisTimeSeries browser tool that comes with RedisInsight. 
 
-[RedisTimeseries](https://oss.redislabs.com/redistimeseries/) is a Redis module developed by Redis Labs to enhance your experience managing time-series data with Redis. It simplifies the use of Redis for time-series use cases such as internet of things (IoT) data, stock prices, and telemetry. With RedisTimeSeries, you can ingest and query millions of samples and events at the speed of Redis. Advanced tooling such as downsampling and aggregation ensure a small memory footprint without impacting performance. Use a variety of queries for visualization and monitoring with built-in connectors to popular monitoring tools like Grafana, Prometheus, and Telegraf.
+[RedisTimeseries](https://oss.redis.com/redistimeseries/) is a Redis module developed by Redis to enhance your experience managing time-series data with Redis. It simplifies the use of Redis for time-series use cases such as internet of things (IoT) data, stock prices, and telemetry. With RedisTimeSeries, you can ingest and query millions of samples and events at the speed of Redis. Advanced tooling such as downsampling and aggregation ensure a small memory footprint without impacting performance. Use a variety of queries for visualization and monitoring with built-in connectors to popular monitoring tools like Grafana, Prometheus, and Telegraf.
 
 With RedisInsight browser tool, you can perform the below sets of activities:
 
@@ -29,14 +29,14 @@ With RedisInsight browser tool, you can perform the below sets of activities:
 
 ## Step 1. Create Redis database
 
-[Follow this link to create Redis database using Docker container ](https://developer.redislabs.com/explore/redismod)that comes with RedisTimeSeries module enabled
+[Follow this link to create Redis database using Docker container ](https://developer.redis.com/explore/redismod)that comes with RedisTimeSeries module enabled
 
 ## Step 2: Download RedisInsight
 
 
 To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
 
-[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+[Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](images/redisinsightinstall.png)
 
@@ -229,10 +229,10 @@ $ python3 dataloader.py
 
 ## Additional Resources
 
-- [RedisTimeSeries Project](https://oss.redislabs.com/redistimeseries/)
+- [RedisTimeSeries Project](https://oss.redis.com/redistimeseries/)
 - [RedisTimeSeries Tutorial](/howtos/redistimeseries)
 - [Analyze Your Redis commands using RedisInsight Profiler tool](explore/redisinsight/profiler)
-- [How to Manage Real-Time IoT Sensor Data in Redis](https://redislabs.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
+- [How to Manage Real-Time IoT Sensor Data in Redis](https://redis.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
 
 ##
 
