--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -20,14 +20,14 @@ Follow the below steps to see how Slowlog is leveraged to troubleshoot performan
 
 ## Step 1. Create a Redis database
 
-Follow [https://developer.redislabs.com/create](https://developer.redislabs.com/create) to install and create Redis database
+Follow [https://developer.redis.com/create](https://developer.redis.com/create) to install and create Redis database
 
 ## Step 2: Download RedisInsight
 
 
 To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
 
-[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+[Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](images/redisinsightinstall.png)
 
