--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -23,7 +23,7 @@ Redis Streams lets you build “Kafka-like” applications, which can:
 
 In addition, Redis Streams has the concept of consumer groups. Redis Streams consumer groups, like the similar concept in [Apache Kafka](https://kafka.apache.org/), allows client applications to consume messages in a distributed fashion (multiple clients), making it easy to scale and create highly available systems.
 
-Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/streams-intro) through the lens of RedisInsight. You will see how to use [Lettuce Java client](https://developer.redislabs.com/develop/java/#using-lettuce) to publish and consume messages using consumer groups.This is the first basic example that uses a single consumer.
+Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/streams-intro) through the lens of RedisInsight. You will see how to use [Lettuce Java client](https://developer.redis.com/develop/java/#using-lettuce) to publish and consume messages using consumer groups.This is the first basic example that uses a single consumer.
 
 ## Prerequisite:
 
@@ -31,7 +31,7 @@ Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/st
 
 -   [Install OpenJDK](https://openjdk.java.net/install/)
 -   [Install Apache Maven](https://maven.apache.org/install.html)
--   [Install Redis](https://developer.redislabs.com/create)
+-   [Install Redis](https://developer.redis.com/create)
 
 
 ## Step 1: Download RedisInsight
@@ -39,7 +39,7 @@ Let’s dive under the covers and see [Redis Streams](https://redis.io/topics/st
 
 To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
 
-[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+[Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](images/redisinsightinstall.png)
 
