--- a/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
+++ b/docs/explore/redisinsight/usinghelm/index-usinghelm.mdx
@@ -54,7 +54,7 @@ Install Docker Desktop for Mac and enable Kubernetes as shown below:
 ### Step 4. Download RedisInsight Helm Chart
 
  ```
-  wget https://docs.redislabs.com/latest/pkgs/redisinsight-chart-0.1.0.tgz
+  wget https://docs.redis.com/latest/pkgs/redisinsight-chart-0.1.0.tgz
  ```
 
 ### Step 5. Verify if Kubernetes is up and running
