--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -69,7 +69,7 @@ Please note: By default, Redis has 0-15 indexes for databases, you can change th
 
 ### References
 
-- [Redis Enterprise For Windows](https://redislabs.com/lp/redis-windows/)
+- [Redis Enterprise For Windows](https://redis.com/lp/redis-windows/)
 - [List of .Net Clients](https://redis.io/clients#c)
 - [Redis client for .NET languages](https://github.com/StackExchange/StackExchange.Redis)
 
