--- a/docs/develop/dotnet/index-dotnet.mdx
+++ b/docs/develop/dotnet/index-dotnet.mdx
@@ -253,8 +253,8 @@ Check out a few of these apps below, or [click here to access the complete list]
 
 #### Additional Resources
 
-- [Using C# with Redis](https://docs.redislabs.com/latest/rs/references/client_references/client_csharp/)
-- [Using SSL and StackExchange.Redis](https://docs.redislabs.com/latest/rs/references/client_references/client_csharp/)
+- [Using C# with Redis](https://docs.redis.com/latest/rs/references/client_references/client_csharp/)
+- [Using SSL and StackExchange.Redis](https://docs.redis.com/latest/rs/references/client_references/client_csharp/)
 
 
 
