--- a/docs/explore/redisinsight/browser/index-browser.mdx
+++ b/docs/explore/redisinsight/browser/index-browser.mdx
@@ -20,14 +20,14 @@ In order to understand the capabilities of the browser tool, let us take a simpl
 
 ## Step 1: Create a Redis Database
 
-[Follow this link ](https://developer.redislabs.com/create)to create Redis database
+[Follow this link ](https://developer.redis.com/create)to create Redis database
 
 ## Step 2: Download RedisInsight
 
 
 To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
 
-[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+[Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](images/redisinsightinstall.png)
 
