--- a/docs/explore/redisinsight/cluster/index-cluster.mdx
+++ b/docs/explore/redisinsight/cluster/index-cluster.mdx
@@ -93,7 +93,7 @@ In order to start a 6 nodes cluster with 3 masters and 3 replicas, just type the
 
 To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
 
-[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+[Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](images/redisinsightinstall.png)
 
