--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -42,7 +42,7 @@ A full-featured pure desktop GUI client, RedisInsight is available for Windows, 
 
 To use RedisInsight on a local Mac, you can download from the RedisInsight page on the RedisLabs website:
 
-[Click this link ](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
+[Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
 ![My Image](redisinsightmac.png)
 
@@ -100,7 +100,7 @@ You can see the output displayed at the top of the screen. If it says “OK,” 
 
 To use RedisInsight on your Linux machine, you can download from the RedisInsight page on the RedisLabs website:
 
-Open [this](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
+Open [this](https://redis.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
 
 ![My Image](redisinsight-linux.png)
 
@@ -169,7 +169,7 @@ To install RedisInsight on Windows, there is no need to install any .NET framewo
 
 To use RedisInsight on your Windows machine, you can download from the RedisInsight page on the RedisLabs website:
 
-Open [this](https://redislabs.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
+Open [this](https://redis.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
 
 #### Step 2.  Install RedisInsight
 
