Further replacement of redislabs URLs.

--- a/docs/explore/riot/index-riot.mdx
+++ b/docs/explore/riot/index-riot.mdx
@@ -322,5 +322,5 @@ This will produce Redis strings that look like this:
 
 ### Further References
 
-- [Architecture of RIOT](https://developer.redislabs.com/riot/#_architecture)
-- [Overview of RIOT](https://developer.redislabs.com/riot/)
+- [RIOT Architecture](https://developer.redis.com/riot/#_architecture)
+- [RIOT Overview](https://developer.redis.com/riot/)
