--- a/docs/get-involved/discord/index-discord.mdx
+++ b/docs/get-involved/discord/index-discord.mdx
@@ -34,7 +34,7 @@ One you are on the server, you should be aware of our rules:
 - **DO** share your projects and ideas, but **DO NOT** advertise or solicit in the chat.
 - **DO NOT** ping @here or @everyone and **DO NOT** spam your messages to multiple channels.
 - **DO NOT** DM the admins or send us friend requests unless we invite you to do so.
-- Abide by the **[Redis Community Guidelines & Code of Conduct](https://redislabs.com/community/community-guidelines-code-of-conduct/)**.
+- Abide by the **[Redis Community Guidelines & Code of Conduct](https://redis.com/community/community-guidelines-code-of-conduct/)**.
 
 ## How to get help
 
