--- a/docs/guides/indexing/indexing-querying.mdx
+++ b/docs/guides/indexing/indexing-querying.mdx
@@ -32,6 +32,6 @@ You can follow the [RediSearch Tutorial](https://github.com/RediSearch/redisearc
 Querying, Indexing, and Full-text Search in Redis
 </div>
 
-If you have questions about RediSearch and other module ask them in the [Redis Community Forum](https://forum.redislabs.com/c/modules/redisearch/58).
+If you have questions about RediSearch and other module ask them in the [Redis Community Forum](https://forum.redis.com/c/modules/redisearch/58).
 
 
