--- a/docs/guides/import/index-import.mdx
+++ b/docs/guides/import/index-import.mdx
@@ -89,6 +89,6 @@ If you have an RDB file `dump.rdb` that contains the data you want you can use t
 
 You can easily import data into Redis Enterprise and Redis Enterprise Cloud, take a look to the following documentation:
 
-* [Redis Enterprise Software: Importing Data into a Database](https://docs.redislabs.com/latest/rs/administering/import-export/importing-data/)
-* [Redis Enterprise Cloud: Databases Backup and Import](https://docs.redislabs.com/latest/rc/api/how-to/backup-and-import-databases/)
+* [Redis Enterprise Software: Importing Data into a Database](https://docs.redis.com/latest/rs/administering/import-export/importing-data/)
+* [Redis Enterprise Cloud: Databases Backup and Import](https://docs.redis.com/latest/rc/api/examples/back-up-and-import-data/)
 
