Swapped out more redislabs URLs.

--- a/docs/guides/security/how-to-use-tls-with-redis-enterprise/how-to-use-ssl-tls-with-redis-enterprise.mdx
+++ b/docs/guides/security/how-to-use-tls-with-redis-enterprise/how-to-use-ssl-tls-with-redis-enterprise.mdx
@@ -192,7 +192,7 @@ except Exception as err:
   print("Error connecting to Redis: {}".format(err))
 ```
 
-More information in the documentation "[Using Redis with Python](https://redislabs.com/lp/python-redis/)".
+More information in the documentation "[Using Redis with Python](https://developer.redis.com/develop/python/)".
 
 ### 4.3 Using Node.JS
 
@@ -223,7 +223,7 @@ client.info( "SERVER", function (err, reply) {
 
 ```
 
-More information in the documentation "[Using Redis with Node.js](https://redislabs.com/lp/node-js-redis/)".
+More information in the documentation "[Using Redis with Node.js](https://developer.redis.com/develop/node/)".
 
 ### 4.4 Using Java
 
@@ -312,7 +312,7 @@ public class SSLTest {
 * line 17, set the database password
 
 
-More information in the documentation "[Using Redis with Java](https://redislabs.com/lp/redis-java/)".
+More information in the documentation "[Using Redis with Java](https://developer.redis.com/develop/java/)".
 
 
 ## Conclusion
