--- a/docs/howtos/moviesdatabase/install/index-install.mdx
+++ b/docs/howtos/moviesdatabase/install/index-install.mdx
@@ -9,8 +9,8 @@ slug: /howtos/moviesdatabase/install
 You have multiple ways to run RediSearch:
 
 * building from [sources](https://github.com/RediSearch/RediSearch) and installing it inside an existing Redis Instance
-* using [Redis Cloud](https://redislabs.com/redis-enterprise-cloud/) _(when RediSearch module 2.0 available)_
-* using [Redis Enterprise](https://redislabs.com/redis-enterprise-software/) _(when RediSearch module 2.0 available)_
+* using [Redis Cloud](https://redis.com/redis-enterprise-cloud/overview/)
+* using [Redis Enterprise](https://redis.com/redis-enterprise-software/overview/)
 * using [Docker](https://hub.docker.com/r/redislabs/redisearch/)
 
 Let's use Docker for now.
