--- a/docs/howtos/redisai/index-redisai.mdx
+++ b/docs/howtos/redisai/index-redisai.mdx
@@ -92,7 +92,7 @@ RedisAI supports DL/ML identifiers and their respective backend libraries, inclu
 - TORCH: The PyTorch backend
 - ONNX: ONNXRuntime backend
 
-A complete list of supported backends is in the [release notes for each version](https://docs.redislabs.com/latest/modules/redisai/release-notes/redisai-1.0-release-notes/).
+A complete list of supported backends is in the [release notes for each version](https://docs.redis.com/latest/modules/redisai/release-notes/redisai-1.0-release-notes/).
 
  ```bash
   python3 build.py
@@ -111,7 +111,7 @@ NOTE: This requires redis-cli. If you don't have redis-cli, I've found the easie
 
 ### Step 8. Make Some Predictions
 
-[The AI.TENSORSET command](https://oss.redislabs.com/redisai/commands/#aitensorset) stores a tensor as the value of a key.
+[The AI.TENSORSET command](https://oss.redis.com/redisai/commands/#aitensorset) stores a tensor as the value of a key.
 
 Launch redis-cli:
 
@@ -228,7 +228,7 @@ Define inputs for the loaded model.
 ### References
 
 - [Sample IRIS Classification Source Code](https://github.com/redis-developer/redisai-iris)
-- [RedisAI - A Server for Machine and Deep Learning Models](https://oss.redislabs.com/redisai/)
+- [RedisAI - A Server for Machine and Deep Learning Models](https://oss.redis.com/redisai/)
 
 
 ### Redis University
