--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -384,10 +384,10 @@ You can get permitted_requests_count with this command:
 
 ### References
 
-- [Basic Rate Limiting](https://redislabs.com/redis-best-practices/basic-rate-limiting/)
-- [Rate Limiting with Redis Webinar](https://redislabs.com/webinars-on-demand/rate-limiting-with-redis/)
+- [Basic Rate Limiting](https://redis.com/redis-best-practices/basic-rate-limiting/)
+- [Rate Limiting with Redis Webinar](https://redis.com/webinars-on-demand/rate-limiting-with-redis/)
 - [How to use Redis for real-time metering applications](https://www.infoworld.com/article/3230455/how-to-use-redis-for-real-time-metering-applications.html)
-- [redis-cell: a Rate Limiting Redis Module](https://redislabs.com/blog/redis-cell-rate-limiting-redis-module/)
+- [redis-cell: a Rate Limiting Redis Module](https://redis.com/blog/redis-cell-rate-limiting-redis-module/)
 
 
 ##
