Removed more redislabs URLs.

--- a/docs/howtos/redisjson/using-python/index-usingpython.mdx
+++ b/docs/howtos/redisjson/using-python/index-usingpython.mdx
@@ -140,6 +140,6 @@ In the above example, the code tries to fetch only the location under the addres
 
 - [How to cache JSON data in Redis with Python](/howtos/redisjson/using-python)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs)
-- Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
+- Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
 
 
