--- a/docs/modules/redisbloom/index-redisbloom.mdx
+++ b/docs/modules/redisbloom/index-redisbloom.mdx
@@ -110,4 +110,4 @@ In the above example, the first command shows the result as “1” for both the
 
 ### Next Step 
 
-- Learn more about RedisBloom in the [Quick Start](https://oss.redislabs.com/redisbloom/Quick_Start/) tutorial.
+- Learn more about RedisBloom in the [Quick Start](https://oss.redis.com/redisbloom/Quick_Start/) tutorial.
