--- a/docs/howtos/redisearch/index-redisearch.mdx
+++ b/docs/howtos/redisearch/index-redisearch.mdx
@@ -13,7 +13,7 @@ RediSearch also supports auto-completion with fuzzy prefix matching, and atomic 
 
 ### Step 1. Create free cloud account
 
-Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 ![My Image](images/tryfree.png)
 
