--- a/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
+++ b/docs/howtos/redisjson/jsonind-document/index-jsonind-document.mdx
@@ -6,7 +6,7 @@ slug: /howtos/redisjson/jsonind-document
 authors: [ajeet]
 ---
 
-RedisJSON 2.0 Private Preview was announced for the first time during RedisConf 2021. With this newer version, RedisJSON will fully support JSONPath expressions and [Active-Active geo-distribution](https://redislabs.com/redis-enterprise/technology/active-active-geo-distribution/). The Active-Active implementation is based on [Conflict-free Replicated Data-Types (CRDT)](https://en.wikipedia.org/wiki/Conflict-free_replicated_data_type).
+RedisJSON 2.0 Private Preview was announced for the first time during RedisConf 2021. With this newer version, RedisJSON will fully support JSONPath expressions and [Active-Active geo-distribution](https://redis.com/redis-enterprise/technology/active-active-geo-distribution/). The Active-Active implementation is based on [Conflict-free Replicated Data-Types (CRDT)](https://en.wikipedia.org/wiki/Conflict-free_replicated_data_type).
 
 Prior to v2.2, RediSearch only supported Redis hashes. Going forward, RediSearch will support  RedisJSON documents. This opens a powerful new set of document-based indexing use cases. In addition, RediSearch now provides query profiling. This will empower developers to understand and optimize their RediSearch queries, increasing their developer experience.
 
@@ -210,7 +210,7 @@ We can now search in the address:
 
 ### References
 
-- [Indexing JSON Document](https://oss.redislabs.com/redisearch/master/Indexing_JSON)
-- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redislabs.com/blog/index-and-query-json-docs-with-redis/)
+- [Indexing JSON Document](https://oss.redis.com/redisearch/master/Indexing_JSON/)
+- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
 
 
