--- a/docs/modules/redisjson/index-redisjson.mdx
+++ b/docs/modules/redisjson/index-redisjson.mdx
@@ -152,5 +152,5 @@ A JSON object can also have another object. Here is a simple example of a JSON o
 
 ### Next Step
 
--  Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
+-  Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
 - [How to build shopping cart app using NodeJS and RedisJSON](/howtos/shoppingcart)
