--- a/docs/howtos/redisjson/storing-complex-json-document/index-storing-complex-json-document.mdx
+++ b/docs/howtos/redisjson/storing-complex-json-document/index-storing-complex-json-document.mdx
@@ -142,7 +142,7 @@ In case you want to fetch specific filed (like address), then the code would loo
 ### References
 
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs)
-- Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
+- Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs)
 
