--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -103,6 +103,6 @@ Copy the below content and save the file as “app.js”
 - [RedisJSON and Python](/howtos/redisjson/using-python)
 - [How to store and retrieve nested JSON document](/howtos/redisjson/storing-complex-json-document)
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs) 
-- Learn more about [RedisJSON](https://oss.redislabs.com/redisjson/) in the Quickstart tutorial.
+- Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
 - [How to build shopping cart app using NodeJS and RedisJSON](/howtos/shoppingcart)
-- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redislabs.com/blog/index-and-query-json-docs-with-redis/)
+- [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
