--- a/docs/howtos/redistimeseries/using-go/index-usinggo.mdx
+++ b/docs/howtos/redistimeseries/using-go/index-usinggo.mdx
@@ -21,7 +21,7 @@ Follow the steps below to get started with RedisTimeSeries with Go:
 
 ### Step 1. Create free Redis Enterprise Cloud account
 
-Create your free [Redis Enterprise Cloud account](https://redislabs.com/try-free/). Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+Create your free [Redis Enterprise Cloud account](https://redis.com/try-free/). Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 
 
@@ -162,8 +162,8 @@ OK
 ## References
 
 - [Getting Started with RedisTimeSeries](/howtos/redistimeseries/getting-started/)
-- Learn more about RedisTimeSeries in the [Quickstart](https://oss.redislabs.com/redistimeseries/) tutorial.
-- [Build Your Financial Application on RedisTimeSeries](https://redislabs.com/blog/build-your-financial-application-on-redistimeseries/)
-- [How to Manage Real-Time IoT Sensor Data in Redis](https://redislabs.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
+- Learn more about RedisTimeSeries in the [Quickstart](https://oss.redis.com/redistimeseries/) tutorial.
+- [Build Your Financial Application on RedisTimeSeries](https://redis.com/blog/build-your-financial-application-on-redistimeseries/)
+- [How to Manage Real-Time IoT Sensor Data in Redis](https://redis.com/blog/how-to-manage-real-time-iot-sensor-data-in-redis/)
 - [Introduction to RedisTimeSeries - Video](https://www.youtube.com/watch?v=rXynFOrrd-Q)
 
